# ntfs-forensic

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  deny.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: attribute.rs  attribute_list.rs  boot.rs  bytes.rs  carve.rs  compress.rs  data.rs  error.rs  file_name.rs  fs.rs  index.rs  lib.rs  mft.rs  mftmirr.rs  record.rs  refs.rs  rewind.rs  source.rs  standard_information.rs  vfs.rs
core/src/logfile/: mod.rs  semantics.rs  transactions.rs  usn_extractor.rs
core/src/usn/: carver.rs  mod.rs  reader.rs  record.rs
core/tests/: logfile_rcrd.rs  lznt1_real.rs  ntfs_artifacts.rs  parity_mft.rs  real_image.rs  usn.rs  vfs_ntfs.rs
docs/: PRD.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-reader-analyzer-split.md  0002-from-scratch-spec-first-ntfs-parsing.md  0003-crate-naming-and-import-path.md  0004-forensicnomicon-knowledge-leaf.md  0005-memory-safety-and-panic-free-posture.md  0006-reuse-lznt1-crate.md  0007-absorb-usn-rewind-stack.md  0008-forensic-vfs-adapter-optional-feature.md  0009-low-msrv-floor-decoupled-from-toolchain.md
docs/plans/: 2026-06-09-usnjrnl-absorption.md
forensic/: CHANGELOG.md  Cargo.toml  README.md
forensic/src/: analysis.rs  correlation.rs  lib.rs  rules.rs
forensic/src/triage/: mod.rs  queries.rs
forensic/tests/: artifact_audit.rs
fuzz/: Cargo.toml
fuzz/corpus/compress/: crash-a026d91c6d360c825ebb7e74b8a4b4628cbc5606
fuzz/fuzz_targets/: attribute_list.rs  attributes.rs  boot.rs  compress.rs  index_buffer.rs  record.rs  runlist.rs
src/: attribute.rs  attribute_list.rs  boot.rs  compress.rs  data.rs  error.rs  file_name.rs  forensic.rs  fs.rs  index.rs  lib.rs  record.rs  runlist.rs  source.rs  standard_information.rs  time.rs
supply-chain/: config.toml
tests/: parity_mft.rs  real_image.rs
tests/data/: README.md  lznt1_real.expected
