[package]
name = "ntfs-forensic"
version = "0.6.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Forensic anomaly auditor for NTFS — timestomping, alternate data streams, deleted records, and MFT-record slack as graded report::Finding, built on ntfs-core"
repository = "https://github.com/SecurityRonin/ntfs-forensic"
homepage = "https://github.com/SecurityRonin/ntfs-forensic"
documentation = "https://docs.rs/ntfs-forensic"
readme = "README.md"
authors = ["Albert Hui <albert@securityronin.com>"]
keywords = ["forensics", "ntfs", "dfir", "timestomp", "anti-forensics"]
categories = ["parser-implementations", "filesystem"]

[dependencies]
ntfs-core = { version = "0.7.0", path = "../core" }
# NTFS structure knowledge + the shared report model (Severity/Observation).
forensicnomicon = "0.3.1"
# USN rule-engine regex matching + record timestamp formatting.
regex = "1"
chrono = "0.4"

[lints]
workspace = true
