[package]
name = "ntfs-forensic"
version = "0.8.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Forensic anomaly auditor for NTFS — timestomping, alternate data streams, deleted records, and MFT-record slack as graded report::Finding, built on ntfs-core"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ntfs-forensic"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "ntfs", "dfir", "timestomp", "anti-forensics"]
categories.workspace = true

[dependencies]
ntfs-core = { workspace = true }
# NTFS structure knowledge + the shared report model (Severity/Observation).
forensicnomicon = { workspace = true }
# USN rule-engine regex matching + record timestamp formatting.
regex = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
