[package]
name = "ntfs-forensic-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone workspace: the fuzz crate must not be pulled into the parent
# (core/forensic) workspace, whose virtual root manifest is not a package.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

# The fuzzed structures (boot record, MFT record, attributes, runlist, index
# buffer, LZNT1) are the reader's — they live in ntfs-core.
[dependencies.ntfs-core]
path = "../core"

[[bin]]
name = "boot"
path = "fuzz_targets/boot.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record"
path = "fuzz_targets/record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attributes"
path = "fuzz_targets/attributes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runlist"
path = "fuzz_targets/runlist.rs"
test = false
doc = false
bench = false

[[bin]]
name = "index_buffer"
path = "fuzz_targets/index_buffer.rs"
test = false
doc = false
bench = false


[[bin]]
name = "attribute_list"
path = "fuzz_targets/attribute_list.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
